[project]
name = "vision-beyond-sight"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.15"
dependencies = [
    "huggingface-hub>=1.8.0",
    "numpy>=2.4.4",
    "opencv-python>=4.13.0.92",
    "pillow>=12.1.1",
    "pip>=26.0.1",
    "pyttsx3>=2.99",
    "timm>=1.0.26",
    "transformers>=5.4.0",
    "ultralytics>=8.4.31",
]
